Part with Stats Boxes added - mobile

--- a/scss/settings/_colors.scss
+++ b/scss/settings/_colors.scss
@@ -6,3 +6,7 @@ $header-navtexthover-color: #000000;
 $section-sell-buttonbg-color: #08A6E4;
 $section-sell-buttontext-color: #fff;
 $section-sell-buttonshadow-color: #07ACE629;
+$stats-text-color: #A5A5A5;
+$stats-firstcircle-color: #FB3B64;
+$stats-secondcircle-color: #08A6E4;
+$stats-thirdcircle-color: #55DFB4;
