Section 'About' boxes made - mobile

--- a/scss/settings/_colors.scss
+++ b/scss/settings/_colors.scss
@@ -10,3 +10,9 @@ $stats-text-color: #A5A5A5;
 $stats-firstcircle-color: #FB3B64;
 $stats-secondcircle-color: #08A6E4;
 $stats-thirdcircle-color: #55DFB4;
+$about-bg-color:#F7F7F7;
+$about-boxbg-color:#FFFFFF;
+$about-boxborder-color:#E8E9ED;
+$about-firstboximagebg-color: #FB3B64;
+$about-secondboximagebg-color: #07ACE6;
+$about-thirdboximagebg-color: #55DFB4;
