--- a/scss/elements/_sell-section.scss
+++ b/scss/elements/_sell-section.scss
@@ -1,58 +1,61 @@
 .sell {
-    width: 100%;
-    height: 90vh;
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(../img/Background.png);
+  background-size: 200%;
+  background-position-x: center;
+  background-position-y: 55vh;
+  background-repeat: no-repeat;
+
+  @media (orientation: landscape) {
+    height: 120vh;
+    background-size: 100%;
+    background-position-y: 80vh;
+  }
+
+  .sell-content {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    background-image: url(../img/Background.png);
-    background-size: 200%;
-    background-position-x: center;
-    background-position-y: 55vh;
-    background-repeat: no-repeat;
+    width: 70%;
+    margin-top: 12vh;
 
     @media (orientation: landscape) {
-        height: 120vh;
-        background-size: 100%;
-        background-position-y: 80vh;
+      margin-top: 20vh;
     }
 
-    .sell-content {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 70%;
-        margin-top: 7rem;
-
-
-        h1 {
-            font-size: 3.5rem;
-            font-family: 'Raleway', sans-serif;
-            font-weight: 400;
-            margin: 2rem 0;
-        }
-
-        p {
-            font-size: 1.6rem;
-            line-height: 2.2rem;
-            font-family: 'Open Sans', sans-serif;
-            text-align: center;
-        }
-
-        a {
-            color: $section-sell-buttontext-color;
-            background-color: $section-sell-buttonbg-color;
-            box-shadow: .5rem 1rem 1.4rem $section-sell-buttonshadow-color;
-            padding: 2rem 6rem;
-            border-radius: 4rem;
-            margin-top: 3rem;
-            font-size: 1.6rem;
-            font-family: 'Open Sans', sans-serif;
-            font-weight: 700;
-        }
+    h1 {
+      font-size: 3.5rem;
+      font-family: "Raleway", sans-serif;
+      font-weight: 400;
+      margin: 2rem 0;
     }
 
-    img {
-        width: 100%;
+    p {
+      font-size: 1.6rem;
+      line-height: 2.2rem;
+      font-family: "Open Sans", sans-serif;
+      text-align: center;
     }
+
+    a {
+      color: $section-sell-buttontext-color;
+      background-color: $section-sell-buttonbg-color;
+      box-shadow: 0.5rem 1rem 1.4rem $section-sell-buttonshadow-color;
+      padding: 2rem 6rem;
+      border-radius: 4rem;
+      margin-top: 3rem;
+      font-size: 1.6rem;
+      font-family: "Open Sans", sans-serif;
+      font-weight: 700;
+    }
+  }
+
+  img {
+    width: 100%;
+  }
 }
