--- a/scss/elements/_header.scss
+++ b/scss/elements/_header.scss
@@ -2,17 +2,22 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
     z-index: 3;
+    width: 100%;
     background-color: #fff;
 
     .top {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        height: 10vh;
         width: 100%;
         padding: 2.5rem;
         box-shadow: 0 .3rem .6rem $header-shadow-color;
+
+        @media (orientation: landscape) {
+            height: 15vh;
+        }
 
         .logo {
             font-size: 3.2rem;
@@ -23,23 +28,72 @@ header {
         }
 
         .hamburger {
-            font-size: 2rem;
-            font-weight: 300;
-            color: $header-hamburger-color;
+            position: fixed;
+            top: 2rem;
+            right: 3rem;
+            width: 5rem;
+            height: 3rem;
+            // color: $header-hamburger-color;
+
+            @media (orientation:landscape) {
+                top: 1.5rem;
+            }
+
+            span {
+                position: absolute;
+                width: 100%;
+                height: .6rem;
+                background-color: $header-hamburger-color;
+                transition: top .2s .2s, bottom .2s .2s, opacity .2s .2s, transform .2s .4s;
+
+                &:nth-of-type(1) {
+                    top: 0;
+                }
+
+                &:nth-of-type(2) {
+                    opacity: 1;
+                    top: calc(50% - 0.3rem);
+                }
+
+                &:nth-of-type(3) {
+                    bottom: 0;
+                }
+            }
+        }
+
+        .active {
+            span {
+                transition: top .2s .2s, bottom .2s .2s, opacity .2s .2s, transform .2s .4s;
+
+                &:nth-of-type(1) {
+                    top: calc(50% - 0.3rem);
+                    transform: rotate(45deg);
+                }
+
+                &:nth-of-type(2) {
+                    opacity: 0;
+                }
+
+                &:nth-of-type(3) {
+                    bottom: calc(50% - 0.3rem);
+                    transform: rotate(-45deg);
+                }
+            }
         }
     }
 
-    nav {
+    .menu {
         position: absolute;
-        top: 12vh;
+        top: -30vh;
+        z-index: 3;
         padding: 1rem 0;
-        display: none;
         background-color: #fff;
         width: 100%;
         box-shadow: 0 .3rem .6rem $header-shadow-color;
+        transition: .5s;
 
         @media (orientation: landscape) {
-            top: 21.5vh;
+            top: 15vh;
         }
 
         ul {
@@ -58,5 +112,9 @@ header {
                 }
             }
         }
+    }
+
+    .show {
+        top: 10vh;
     }
 }
