--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,3 +6,4 @@
 @import "elements/sell-section";
 @import "elements/stats-boxes";
 @import "elements/about-boxes";
+@import "./elements/pricing-section";
