--- a/scss/settings/_colors.scss
+++ b/scss/settings/_colors.scss
@@ -16,3 +16,20 @@ $about-boxborder-color:#E8E9ED;
 $about-firstboximagebg-color: #FB3B64;
 $about-secondboximagebg-color: #07ACE6;
 $about-thirdboximagebg-color: #55DFB4;
+$pricing-firstOfferBorder-color: #FB3B64;
+$pricing-secondOfferBorder-color: #07ACE6;
+$pricing-secondOfferShadow-color: #07ACE629;
+$pricing-thirdOfferBorder-color: #55DFB4;
+$pricing-offerNameText-color: #13253B;
+$pricing-offerLimitedText-color: #13253B;
+$pricing-firstOfferPriceText-color:#FB3B64;
+$pricing-secondOfferPriceText-color:#07ACE6;
+$pricing-thirdOfferPriceText-color:#55DFB4;
+$pricing-offerTickBorder-color: #55DFB4;
+$pricing-offerCrossText-color: #EB476E;
+$pricing-offerCrossBorder-color: #EB476E;
+$pricing-buttonText-color: #FFFFFF;
+$pricing-firstButtonBg-color: #EB476E;
+$pricing-secondButtonBg-color: #07ACE6;
+$pricing-secondButtonShadow-color: #07ACE629;
+$pricing-thirdButtonBg-color: #55DFB4;
